force-app/main/default/objects/Customer_Readiness_Form_Support__c/Customer_Readiness_Form_Support__c.object-meta.xml
<CustomObject>
    <label>Customer Readiness Form Support</label>
    <nameField>
        <label>Customer Readiness Form Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Readiness Form Support</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>