force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Are_Electrical_Specifications_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Are_Electrical_Specifications_Reviewed__c</fullName>
    <description>Check if Electrical specifications are reviewed</description>
    <defaultValue>false</defaultValue>
    <label>Are Electrical Specifications Reviewed</label>
    <type>Checkbox</type>
</CustomField>