force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Are_Illumina_Security_Best_Practice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Are_Illumina_Security_Best_Practice_Sent__c</fullName>
    <description>Check if Illumina best practices are sent</description>
    <defaultValue>false</defaultValue>
    <label>Are Illumina Security Best Practice Sent</label>
    <type>Checkbox</type>
</CustomField>