force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Can_Area_Accept_4_5m_15_Crate_Ramp__c.field-meta.xml
<CustomField>
    <fullName>Can_Area_Accept_4_5m_15_Crate_Ramp__c</fullName>
    <description>Check if 4/5/15 area crate ramp is accepted</description>
    <defaultValue>false</defaultValue>
    <label>Can Area Accept 4.5m (15&apos;) Crate Ramp</label>
    <type>Checkbox</type>
</CustomField>