force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Does_Lab_Temperature_Meets_Spec__c.field-meta.xml
<CustomField>
    <fullName>Does_Lab_Temperature_Meets_Spec__c</fullName>
    <description>Check if lab temperature meets spec</description>
    <defaultValue>false</defaultValue>
    <label>Does Lab Temperature Meets Spec</label>
    <type>Checkbox</type>
</CustomField>