force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Has_1_5_ml_Tube_Heatblock__c.field-meta.xml
<CustomField>
    <fullName>Has_1_5_ml_Tube_Heatblock__c</fullName>
    <description>Check if Tube heatblock has 1.5ml</description>
    <defaultValue>false</defaultValue>
    <label>Has 1.5 ml Tube Heatblock</label>
    <type>Checkbox</type>
</CustomField>