force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Has_96_Well_Magnetic_Stand__c.field-meta.xml
<CustomField>
    <fullName>Has_96_Well_Magnetic_Stand__c</fullName>
    <description>Check if well magnetic stand is used</description>
    <defaultValue>false</defaultValue>
    <label>Has 96-Well Magnetic Stand</label>
    <type>Checkbox</type>
</CustomField>