force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Has_96well_Heat_Block_Not_Thermocycler__c.field-meta.xml
<CustomField>
    <fullName>Has_96well_Heat_Block_Not_Thermocycler__c</fullName>
    <description>Check if well heat blocker deoes not have thermocycler</description>
    <defaultValue>false</defaultValue>
    <label>Has 96well Heat Block (Not Thermocycler)</label>
    <type>Checkbox</type>
</CustomField>