force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Has_Microplate_Centrifuge__c.field-meta.xml
<CustomField>
    <fullName>Has_Microplate_Centrifuge__c</fullName>
    <description>Check if microplate centrifuge is available</description>
    <defaultValue>false</defaultValue>
    <label>Has Microplate Centrifuge</label>
    <type>Checkbox</type>
</CustomField>