force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Has_MIDI_Plate_Insert_For_TruTemp_System__c.field-meta.xml
<CustomField>
    <fullName>Has_MIDI_Plate_Insert_For_TruTemp_System__c</fullName>
    <description>Check if MIDI Plate is inserted for TruTemp system</description>
    <defaultValue>false</defaultValue>
    <label>Has MIDI Plate Insert For TruTemp System</label>
    <type>Checkbox</type>
</CustomField>