force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Has_Minimum_15Amp_Grounded_Line__c.field-meta.xml
<CustomField>
    <fullName>Has_Minimum_15Amp_Grounded_Line__c</fullName>
    <description>Check if atleast 15 Amp grounded line is available</description>
    <defaultValue>false</defaultValue>
    <label>Has Minimum 15Amp Grounded Line</label>
    <type>Checkbox</type>
</CustomField>