force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Is_1_GB_Network_Connection_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_1_GB_Network_Connection_Available__c</fullName>
    <description>Check if 1GB netwrok connection is available</description>
    <defaultValue>false</defaultValue>
    <label>Is 1 GB Network Connection Available</label>
    <type>Checkbox</type>
</CustomField>