force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Is_Air_Quality_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Is_Air_Quality_Discussed__c</fullName>
    <description>Check if Air quality is discussed</description>
    <defaultValue>false</defaultValue>
    <label>Is Air Quality Discussed</label>
    <type>Checkbox</type>
</CustomField>