force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Is_Environmental_Monitor_System_Placed__c.field-meta.xml
<CustomField>
    <fullName>Is_Environmental_Monitor_System_Placed__c</fullName>
    <description>Check if environmental monitor system is placed</description>
    <defaultValue>false</defaultValue>
    <label>Is Environmental Monitor System Placed</label>
    <type>Checkbox</type>
</CustomField>