force-app/main/default/objects/Customer_Readiness_Form_Support__c/fields/Is_Internet_Access_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Internet_Access_Available__c</fullName>
    <description>Check if Internet access is available</description>
    <defaultValue>false</defaultValue>
    <label>Is Internet Access Available</label>
    <type>Checkbox</type>
</CustomField>