force-app/main/default/objects/Customer_Readiness_Form_Support__c/recordTypes/Benchtop.recordType-meta.xml
<RecordType>
    <fullName>Benchtop</fullName>
    <active>true</active>
    <label>Benchtop</label>
</RecordType>