force-app/main/default/objects/Customer_Readiness_Form_Support__c/recordTypes/HiSeq_iScan.recordType-meta.xml
<RecordType>
    <fullName>HiSeq_iScan</fullName>
    <active>true</active>
    <label>HiSeq iScan</label>
</RecordType>