force-app/main/default/objects/Customer_Readiness_Form_Support__c/recordTypes/Library_Prep_Training.recordType-meta.xml
<RecordType>
    <fullName>Library_Prep_Training</fullName>
    <active>true</active>
    <label>Library Prep Training</label>
</RecordType>