force-app/main/default/objects/Customer_Readiness_Form_Support__c/recordTypes/NovaSeq.recordType-meta.xml
<RecordType>
    <fullName>NovaSeq</fullName>
    <active>true</active>
    <label>NovaSeq</label>
</RecordType>