force-app/main/default/objects/Customer_Readiness_Form_Support__c/listViews/Library_Prep_Training_Support_Forms.listView-meta.xml
<ListView>
    <fullName>Library_Prep_Training_Support_Forms</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Readiness_Form_Support__c.Library_Prep_Training</value>
    </filters>
    <label>Library Prep Training Support Forms</label>
    <language>en_US</language>
</ListView>